# myproject

./: README.md
myproject/: CMakeLists.txt  README.md  build.sh  pyproject.toml  setup.py  uninstall.sh
myproject/include/: mylib.h
myproject/launchd/: com.myorg.myproject.plist
myproject/pkg/: Distribution.xml
myproject/python/myproject/: cbridge.py  infer.py  model.py  train.py
myproject/python/tests/: test_model.py
myproject/scripts/: postinstall.sh
myproject/src/bindings/: pybindings.cpp
myproject/src/mylib/: mylib.cpp  mylib.h
